# nana-demo

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  FreeMe.cpp  README.md  calculator.cpp  calculator.cpp.orig  file_explorer.cpp  helloworld_demo.cpp  notepad.cpp  subclass.cpp  widget_show.cpp  widget_show2.cpp
Examples/: HelloWord-Quit.cpp  HelloWord.cpp  MontiHall.cpp  a_group_impl.cpp  animate-bmp.cpp  audio_player.cpp  audio_player_simple.cpp  background-effects.cpp  categ.cpp  clicked.cpp  decore.cpp  design_1.cpp  design_2.cpp  design_3.cpp  dock.cpp  drag-button.cpp  draw.cpp  example.button.cpp  example_combox.cpp  example_listbox.cpp  example_menu.cpp  filebox-txt.cpp  folder_tree.cpp  folder_tree_nana.cpp  folder_tree_std.cpp  framework_design_1.cpp  framework_design_2.cpp  framework_design_3.cpp  group.cpp  helloword_quit.cpp  inputbox.cpp  label_listener.cpp  lambda_event.Cpp11.cpp  listbox_Resolver.cpp  listbox_inline_widget.cpp  loader_1.cpp  loader_2.cpp  main.cpp  mbox.cpp  menu_debug.cpp  (+19 more)
nana-demo-projects/: FreeMe.vcxproj  HelloWord-Quit.vcxproj  HelloWord.vcxproj  MontiHall.vcxproj  a_group_impl.vcxproj  a_group_impl.vcxproj.filters  animate-bmp.vcxproj  animate-bmp.vcxproj.filters  audio_player.vcxproj  audio_player_simple.vcxproj  audio_player_simple.vcxproj.filters  background-effects.vcxproj  background-effects.vcxproj.filters  calculator.vcxproj  categ.vcxproj  clicked.vcxproj  decore.vcxproj  design_1.vcxproj  design_2.vcxproj  design_3.vcxproj  drag-button.vcxproj  draw.vcxproj  example - Kopie (4).vcxproj  example.button.vcxproj  example.vcxproj  example.vcxproj.filters  example_combox.vcxproj  example_listbox.vcxproj  (+30 more)
nana-demo-projects-vc2013/: FreeMe.vcxproj  FreeMe.vcxproj.filters  HelloWord.vcxproj  MontiHall.vcxproj  Readme.md  a_group_impl.vcxproj  a_group_impl.vcxproj.filters  audio_player.vcxproj  background-effects.vcxproj  categ.vcxproj  categ.vcxproj.filters  clicked.vcxproj  clicked.vcxproj.filters  decore.vcxproj  design_1.vcxproj  design_1.vcxproj.filters  design_2.vcxproj  design_3.vcxproj  design_3.vcxproj.filters  example.button.vcxproj  example.vcxproj  example_listbox.vcxproj  file_explorer.vcxproj  folder_tree.vcxproj  label_listener.vcxproj  lambda_event.Cpp11.vcxproj  loader_1.vcxproj  mbox.vcxproj  menu_debug.vcxproj  modal_form.vcxproj  nana-demo-projects.sln  place_login.vcxproj  place_login.vcxproj.filters  stretch_image.vcxproj  thread-pool.vcxproj  threading.vcxproj  various_events.vcxproj  various_events.vcxproj.filters  widget_show.vcxproj  widget_show2.vcxproj  (+2 more)
nana-demo-projects-vc2015/: FreeMe.vcxproj  HelloWord-Quit.vcxproj  HelloWord.vcxproj  MontiHall.vcxproj  a_group_impl.vcxproj  animate-bmp.vcxproj  audio_player.vcxproj  audio_player_simple.vcxproj  background-effects.vcxproj  calculator.vcxproj  categ.vcxproj  clicked.vcxproj  decore.vcxproj  design_1.vcxproj  design_2.vcxproj  design_3.vcxproj  dock.vcxproj  drag-button.vcxproj  draw.vcxproj  example.button.vcxproj  example.vcxproj  example_combox.vcxproj  example_listbox.vcxproj  example_menu.vcxproj  file_explorer.vcxproj  filebox-txt.vcxproj  folder_tree.vcxproj  folder_tree_nana.vcxproj  folder_tree_std.vcxproj  group.vcxproj  inputbox.vcxproj  label_listener.vcxproj  lambda_event.Cpp11.vcxproj  listbox_Resolver.vcxproj  listbox_inline_widget.vcxproj  loader_1.vcxproj  loader_2.vcxproj  mbox.vcxproj  menu_debug.vcxproj  menu_popuper.vcxproj  (+14 more)
nana-demo-projects-vc2017/: FreeMe.vcxproj  HelloWord-Quit.vcxproj  HelloWord.vcxproj  MontiHall.vcxproj  a_group_impl.vcxproj  animate-bmp.vcxproj  audio_player.vcxproj  audio_player.vcxproj.filters  audio_player_simple.vcxproj  background-effects.vcxproj  calculator.vcxproj  calculator.vcxproj.filters  categ.vcxproj  clicked.vcxproj  decore.vcxproj  design_1.vcxproj  design_2.vcxproj  design_3.vcxproj  dock.vcxproj  drag-button.vcxproj  draw.vcxproj  example.button.vcxproj  example_combox.vcxproj  example_listbox.vcxproj  example_menu.vcxproj  file_explorer.vcxproj  filebox-txt.vcxproj  folder_tree.vcxproj  folder_tree_nana.vcxproj  folder_tree_std.vcxproj  group.vcxproj  inputbox.vcxproj  label_listener.vcxproj  lambda_event.Cpp11.vcxproj  listbox_Resolver.vcxproj  listbox_inline_widget.vcxproj  listbox_inline_widget.vcxproj.filters  loader_1.vcxproj  loader_2.vcxproj  mbox.vcxproj  (+16 more)
nana-demo-projects-vc2019/: FreeMe.vcxproj  HelloWord-Quit.vcxproj  HelloWord.vcxproj  MontiHall.vcxproj  a_group_impl.vcxproj  animate-bmp.vcxproj  audio_player.vcxproj  audio_player_simple.vcxproj  background-effects.vcxproj  calculator.vcxproj  categ.vcxproj  clicked.vcxproj  decore.vcxproj  design_1.vcxproj  design_2.vcxproj  design_2.vcxproj.filters  design_3.vcxproj  dock.vcxproj  dock.vcxproj.filters  drag-button.vcxproj  draw.vcxproj  example.button.vcxproj  example_combox.vcxproj  example_listbox.vcxproj  example_menu.vcxproj  file_explorer.vcxproj  file_explorer.vcxproj.filters  filebox-txt.vcxproj  folder_tree.vcxproj  folder_tree_nana.vcxproj  folder_tree_std.vcxproj  group.vcxproj  inputbox.vcxproj  label_listener.vcxproj  lambda_event.Cpp11.vcxproj  listbox_Resolver.vcxproj  listbox_inline_widget.vcxproj  loader_1.vcxproj  loader_2.vcxproj  mbox.vcxproj  (+15 more)
nana-demo-projects-vc2022/: FreeMe.vcxproj  HelloWord-Quit.vcxproj  HelloWord.vcxproj  MontiHall.vcxproj  a_group_impl.vcxproj  animate-bmp.vcxproj  audio_player.vcxproj  audio_player_simple.vcxproj  background-effects.vcxproj  calculator.vcxproj  categ.vcxproj  clicked.vcxproj  decore.vcxproj  design_1.vcxproj  design_2.vcxproj  design_3.vcxproj  dock.vcxproj  drag-button.vcxproj  draw.vcxproj  example.button.vcxproj  example_combox.vcxproj  example_listbox.vcxproj  example_menu.vcxproj  file_explorer.vcxproj  filebox-txt.vcxproj  folder_tree.vcxproj  folder_tree_nana.vcxproj  folder_tree_std.vcxproj  group.vcxproj  inputbox.vcxproj  label_listener.vcxproj  lambda_event.Cpp11.vcxproj  listbox_Resolver.vcxproj  listbox_inline_widget.vcxproj  loader_1.vcxproj  loader_2.vcxproj  mbox.vcxproj  menu_debug.vcxproj  menu_popuper.vcxproj  modal_form.vcxproj  (+16 more)
(+8 files in other folders)
